--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^9.21.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-faq-component": "^1.3.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-query": "^3.39.3",
